Clean up unused imports, simplify null check, and modernize collection API usage
Remove redundant null check in QueryAggregationService (isValid already handles null),
remove unused imports across services and tests, replace Collectors.toList() with .toList(),
and update components diagram layout.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>